@@ -1,3 +1,43 @@
+#' Get loudness per frame
+#'
+#' Internal soundgen function
+#'
+#' Takes as input the absolute (not power) spectrum of a single STFT frame and
+#' estimates its loudness in sone. See \code{\link{getLoudness}} for details.
+#' @inheritParams getLoudness
+#' @keywords internal
+#' @examples
+#' sound = sin(2*pi*1000/16000*(1:1000))
+#' sound_scaled = soundgen:::scaleSPL(sound, SPL_measured = 40)
+#' spec = spectrogram(
+#'   sound_scaled, samplingRate = 16000, windowLength = 10,
+#'   normalize = FALSE, output = 'original')[, 10]
+#' # plot(spec, type = 'l')
+#' soundgen:::getLoudnessPerFrame(spec, samplingRate = 16000)  # 1 sone
+getLoudnessPerFrame = function(spec,
+                               samplingRate,
+                               spreadSpectrum = TRUE) {
+  powerSpec_scaled = matrix(spec ^ 2 / length(spec), ncol = 1)
+  audSpec = tuneR::audspec(powerSpec_scaled, sr = samplingRate,
+                           fbtype = 'bark')$aspectrum  # plot(audSpec, type = 'l')
+  if (spreadSpectrum) audSpec = spreadSpec(audSpec)
+  audSpec_dB = 10 * log10(audSpec)
+  n_phonCurve = which.min(abs(
+    audSpec_dB[8] - as.numeric(names(phonCurves))))  # 8 barks = 1 kHz
+  curve = phonCurves[[n_phonCurve]][1:length(audSpec_dB), ]
+  audSpec_phon = audSpec_dB + curve$spl[8] - curve$spl
+  audSpec_phon[audSpec_phon < curve$hearingThres_dB | audSpec_phon < 0] = 0
+  # plot(audSpec_phon, type = 'l')
+  audSpec_sone = phon2sone(audSpec_phon)
+  # plot(audSpec_sone, type = 'l')
+  loudness = sum(audSpec_sone)
+  windowLength = length(spec) * 2 / samplingRate * 1000
+  loudness_corrected = loudness / (5.73 +  6.56 * windowLength ^ .35) /
+    (.0357 + .0345 * samplingRate ^ .3113)
+  return(loudness_corrected)
+}
+
+
 #' Scale SPL
 #'
 #' Internal soundgen function
