@@ -4,8 +4,10 @@ NEW FUNCTIONS:
   * getLoudness(): estimates subjective loudness per frame, in sone
 
 MINOR:
+  * analyze(): also returns loudness per frame, in sone (new arguments: SPL_measured and Pref)
   * ssm(): new argument "padWith" for dealing with edges and "heights" for controlling relative plot sizes
-  * analyze(): also returns loudness per frame, in sone
+  * soundgen_app(): fixed a bug introduced in 1.3.0 that caused the app to crash when switching to a new preset
+
 
           CHANGES IN SOUNDGEN VERSION 1.3.0 [31-August-2018]
 
